# MMA

./: .gitignore  =2.0.0  CLEANUP_SUMMARY.md  MMA_MODULARIZATION.md  README.md  pyproject.toml  requirements.txt  setup.py
analyzer/: dist.py
config/: default.yaml  detection.yaml  pose.yaml  tracking.yaml
configs/rtmpose_configs/: rtmpose_x_384x288.py
detection/: test.csv
mma/: __init__.py
mma/core/: __init__.py  config.py  constants.py  exceptions.py
mma/detection/: __init__.py  bbox_utils.py  detector.py
mma/io/: __init__.py  csv_handler.py  data_loader.py
mma/pose/: __init__.py  estimator.py  keypoint_utils.py  weight_distribution.py
mma/preprocessing/: __init__.py  dataset_generator.py  splitter.py
mma/smpl/: __init__.py
mma/tests/: __init__.py  test_integration.py
mma/tracking/: __init__.py  interpolation.py  kalman.py  mma_tracker.py  reid.py  sort_tracker.py
mma/utils/: __init__.py
mma/visualization/: __init__.py  drawer.py
preprocessor/: cleanup_folders.py  crop_detection_pose_dataset.py  crop_yolo_pose_dataset.py  generate_yolo_dataset.py  generate_yolo_pose_dataset.py  migrate_smpl_directories.py  prepare_yolo_pose_dataset.sh  smpl_migration_manifest_20260107_045211.json  smpl_migration_manifest_20260107_045356.json  split_yolo_dataset.py  split_yolo_pose_dataset.py  tmp.sh  wget-log  yolo_to_coco_pose.py
script/: SMPL_FACES_SETUP.md  camera_calibration.py  concat_detection_tracking.py  concat_to_mp4.py  extract_smpl_faces.py  inference_base.py  inference_base_bytetrack.py  mma_tracker.py  pose_estimation.py  pose_estimation_rtm.py  pose_estimation_vitpose.py  render_smpl.py  render_smpl_enhanced.py  run_mma_pipeline.py  smpl_faces_placeholder.npy  smpl_utils.py  test_smpl_rendering.py  train_pose.py  train_pose_yolo.py  train_yolo.sh  transform_coordinates.py  visibility_test.py  visualize_data.py  visualize_game_data.py  visualize_tracking.py
script/backup/: run_full_pipeline.py
script/smpl/: README_SMPL_RENDERING.md  colmap_loader.py
script/train/: train_pose_rtm.py
script/utils/: compute_weight_distribution.py  detection.py  run_all_steps.sh  transform_coordinates.py
script/visualizer/: visualize_pose_estimation.py  visualize_pose_gt.py  visualize_smpl_rendering.py  visualize_training.py  visualize_training_rtmpose.py  visualize_weight_distribution.py
smpl_rendering_results/13_mma2/001_mma2/: visibility_00001.json  visibility_00100.json
